--- a/Tools/Convertible.html
+++ b/Tools/Convertible.html
@@ -78,99 +78,99 @@
     
     <hr>
 
-    <!-- CORVETTE -->
+    <!-- AUDI A5 -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="300px">
+                <img src="./pics/Convertible/Audi A5.jpg" alt="Audi pic" height="300px">
+            </div>
+            <div class="showdetails">
+                <p><span class="key1">Brand:</span> Audi</p>
+                <p><span class="key2">Model:</span> A5</p>
+                <p><span class="key3">Year:</span> 2007 - Present</p>
+                <p><span class="key4">Engine:</span> Turbocharged four-cylinder engines</p>
+                <p><span class="key5">Cost:</span> $40,000 to $50,000+</p>
+                <p><span class="key6">Performance:</span> Stylish design, refined interior</p>
+            </div>
+        </div>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A harmonious blend of elegance and performance, capturing attention with its sleek lines and refined details. With its sophisticated design and dynamic handling, the A5 embodies Audi's commitment to automotive excellence. From its luxurious interior crafted with premium materials to its advanced technology features, every aspect of the A5 is meticulously engineered for an exceptional driving experience. Whether cruising along the coast or navigating city streets, the Audi A5 offers a perfect balance of style, comfort, and exhilarating performance, elevating every journey to a new level of sophistication.</p>
+    </div>
+
+    <!-- BMW 4 -->
+
+    <div class="showcase">
+        <div class="showcar">
+            <div class="showimg">
+                <img src="./pics/Convertible/BMW 4.jpg" alt="BMW pic" height="300px">
+            </div>
+            <div class="showdetails">
+                <p><span class="key1">Brand:</span> BMW</p>
+                <p><span class="key2">Model:</span> 4 Series</p>
+                <p><span class="key3">Year:</span> Introduced in 2013, various iterations up to present</p>
+                <p><span class="key4">Engine:</span> Four-cylinder and six-cylinder engines</p>
+                <p><span class="key5">Cost:</span> $40,000 to $60,000+</p>
+                <p><span class="key6">Performance:</span> Sporty design and strong performance</p>
+            </div>
+        </div>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A dynamic fusion of sporty elegance and exhilarating performance, commanding the road with its sleek design and precision engineering. With its iconic kidney grille and athletic proportions, the 4 Series makes a bold statement wherever it goes. From its luxurious interior appointed with high-quality materials to its powerful engine options and agile handling, every aspect of the 4 Series is crafted to inspire passion for driving. Whether conquering winding mountain roads or cruising through city streets, the BMW 4 Series delivers a thrilling driving experience that is unmistakably BMW.</p>
+    </div>
+
+    <!-- Camaro -->
+
+    <div class="showcase">
+        <div class="showcar">
+            <div class="showimg">
+                <img src="./pics/Convertible/Camaro.jpg" alt="Chevy pic" height="300px">
             </div>
             <div class="showdetails">
                 <p><span class="key1">Brand:</span> Chevrolet</p>
-                <p><span class="key2">Model:</span> Corvette</p>
-                <p><span class="key3">Year:</span> 1953 - Present</p>
-                <p><span class="key4">Engine:</span> Powerful V8</p>
-                <p><span class="key5">Cost:</span> $60,000 to over $100,000</p>
-                <p><span class="key6">Performance:</span> Impressive acceleration, top speed, and handling</p>
+                <p><span class="key2">Model:</span> Camaro</p>
+                <p><span class="key3">Year:</span> Introduced in 1966, various iterations up to present</p>
+                <p><span class="key4">Engine:</span> Turbocharged four-cylinder, V6 and V8 engines</p>
+                <p><span class="key5">Cost:</span> $25,000 to $70,000+</p>
+                <p><span class="key6">Performance:</span> Iconic design, powerful performance</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; The Corvette, a legendary American icon, epitomizes performance and style with its sleek design and powerful V8 engine, offering a thrilling driving experience like no other. With its heritage of speed and innovation, the Corvette continues to captivate enthusiasts worldwide, embodying the spirit of automotive excellence.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A legendary American muscle car icon, roaring to life with its bold design and exhilarating performance. With its iconic silhouette and powerful engine options, the Camaro commands attention on the road and the racetrack alike. From its aggressive stance to its lightning-fast acceleration, every aspect of the Camaro is engineered for pure driving excitement. Whether tearing up the drag strip or cruising the boulevard, the Camaro embodies the spirit of American muscle, delivering heart-pounding thrills and timeless style with every rev of the engine.</p>
     </div>
 
-    <!-- R35 GTR -->
+    <!-- Ferrari -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/R35 GTR.jpg" alt="R35 pic" height="300px">
+                <img src="./pics/Convertible/Ferrari SF90 Spider.jpg" alt="Ferrari pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Nissan</p>
-                <p><span class="key2">Model:</span> R35 GT-R</p>
-                <p><span class="key3">Year:</span> Introduced in 2007, various iterations up to present</p>
-                <p><span class="key4">Engine:</span> Twin-turbocharged V6</p>
-                <p><span class="key5">Cost:</span> $100,000 to $200,000+</p>
-                <p><span class="key6">Performance:</span> Exceptional acceleration, 0-60 mph in under 3s</p>
+                <p><span class="key1">Brand:</span> Ferrari</p>
+                <p><span class="key2">Model:</span> SF90 Spider</p>
+                <p><span class="key3">Year:</span> Introduced in 2021</p>
+                <p><span class="key4">Engine:</span> Twin-turbocharged V8 engine + electric motors</p>
+                <p><span class="key5">Cost:</span> $500,000 to $700,000+</p>
+                <p><span class="key6">Performance:</span> Stunning design, blistering acceleration</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; The R35 GT-R stands as a testament to Japanese automotive ingenuity, blending futuristic design cues with relentless V6 power to redefine the supercar landscape. With its iconic presence and uncompromising performance, the GT-R continues to captivate enthusiasts worldwide, symbolizing a fusion of innovation and raw driving exhilaration.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; An open-air masterpiece, merging cutting-edge technology with breathtaking design to deliver the ultimate driving experience. With its sleek lines and aerodynamic profile, the SF90 Spider exudes performance and elegance in equal measure. Powered by a hybrid V8 engine, it accelerates with electrifying precision, while its retractable hardtop ensures an exhilarating connection to the elements. Inside, the cockpit is a symphony of luxury and innovation, offering unparalleled comfort and intuitive controls. Whether carving through mountain passes or cruising along the coastline, the SF90 Spider represents the pinnacle of Ferrari's engineering prowess, igniting passion in every journey.</p>
     </div>
 
-    <!-- SUPRA -->
+    <!-- McLaren -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/supra.jpg" alt="Supra pic" height="300px">
+                <img src="./pics/Convertible/McLaren 765LT Spider.jpg" alt="McLarem pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Toyota</p>
-                <p><span class="key2">Model:</span> GR Supra</p>
-                <p><span class="key3">Year:</span> Reintroduced in 2019 - Present</p>
-                <p><span class="key4">Engine:</span> Turbocharged inline-six cylinder</p>
-                <p><span class="key5">Cost:</span> $40,000 to $60,000+</p>
-                <p><span class="key6">Performance:</span> Agile handling, 0-60 mph in under 4s</p>
+                <p><span class="key1">Brand:</span> McLaren</p>
+                <p><span class="key2">Model:</span> 765LT Spider</p>
+                <p><span class="key3">Year:</span> Introduced in 2021</p>
+                <p><span class="key4">Engine:</span> Twin-turbocharged V8 engine</p>
+                <p><span class="key5">Cost:</span> $350,000 to $400,000+</p>
+                <p><span class="key6">Performance:</span> Renowned for its track-focused design</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; The GR Supra embodies Toyota's racing legacy, marrying sleek aesthetics with turbocharged power to deliver an electrifying driving experience. With its lineage rooted in motorsport prowess and cutting-edge technology, the Supra redefines the sports car genre, captivating drivers with its dynamic performance and unmistakable presence on the road.</p>
-    </div>
-
-    <!-- REVUELTO -->
-
-    <div class="showcase">
-        <div class="showcar">
-            <div class="showimg">
-                <img src="./pics/Sports/Revuelto.jpeg" alt="Ruvuelto pic" height="300px">
-            </div>
-            <div class="showdetails">
-                <p><span class="key1">Brand:</span> Lamboghini</p>
-                <p><span class="key2">Model:</span> Lamborghini</p>
-                <p><span class="key3">Year:</span> 2023 - Present</p>
-                <p><span class="key4">Engine:</span> 6.5 L V12 Electric</p>
-                <p><span class="key5">Cost:</span> $608,358 avg</p>
-                <p><span class="key6">Performance:</span> Agile handling, high top speed capabilities</p>
-            </div>
-        </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A breathtaking fusion of Italian craftsmanship and raw power, this supercar commands attention with its striking design and exhilarating V10 engine. From its aerodynamic curves to its spine-tingling exhaust note, the Revuelto epitomizes automotive artistry, offering a thrilling driving experience that ignites the senses and leaves a lasting impression on all who behold it.</p>
-    </div>
-
-    <!-- PORSCHE -->
-
-    <div class="showcase">
-        <div class="showcar">
-            <div class="showimg">
-                <img src="./pics/Sports/Porsche 718.jpg" alt="Porsche pic" height="300px">
-            </div>
-            <div class="showdetails">
-                <p><span class="key1">Brand:</span> Porsche</p>
-                <p><span class="key2">Model:</span> 718</p>
-                <p><span class="key3">Year:</span> 2016 - Present</p>
-                <p><span class="key4">Engine:</span> Turbocharged flat-four cylinder</p>
-                <p><span class="key5">Cost:</span> $60,000 to $100,000+</p>
-                <p><span class="key6">Performance:</span> Strong acceleration, 0-60 mph in under 5s</p>
-            </div>
-        </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A true embodiment of precision engineering and iconic design, this sports car captivates with its dynamic performance and timeless silhouette. With its turbocharged powerplant and impeccable handling, the 718 delivers an exhilarating driving experience that defines the essence of Porsche's racing heritage. From the track to the open road, every moment behind the wheel of the 718 is a testament to automotive excellence and passion for driving</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A convertible masterpiece that defies limits, blending raw power with aerodynamic precision for an unrivaled driving experience. With its striking design and lightweight construction, the 765LT Spider commands attention on the road and the track. Powered by a twin-turbocharged V8 engine, it unleashes blistering acceleration and razor-sharp handling, delivering adrenaline-fueled thrills at every turn. Inside, the cockpit is a driver-centric oasis of luxury and technology, ensuring total control and comfort. Whether pushing the limits on the circuit or cruising under the sun, the 765LT Spider embodies McLaren's relentless pursuit of performance perfection, setting a new standard for open-top supercars.</p>
     </div>
 
     
