--- a/Tools/home.html
+++ b/Tools/home.html
@@ -65,7 +65,7 @@
         <h1>Sports Cars</h1>
         <p>Sports cars are known for their sleek designs and high performance capabilities</p>
         <div class="cars-info">
-            <div class="cars-card" id="corvette">
+            <div class="cars-card" id="corvette" onclick="testy()">
                 <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="200px">
                 <p>Chevrolet Corvette</p>
             </div>
@@ -193,7 +193,11 @@
 
     <div class="footer section" id="footy">
         <div class="description">
-
+            <div class="sec1">
+                
+            </div>
+            <div class="sec2"></div>
+            <div class="sec3"></div>
         </div>
     </div>
 
