--- a/Tools/home.html
+++ b/Tools/home.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a id="navCartypes">Car Types</a></li>
-                <li><a href="#">Top Five</a></li>
+                <li><a href="./Topfive.html">Top Five</a></li>
                 <li><a href="#footy">Contact</a></li>
             </ul>
         </div>
@@ -190,6 +190,8 @@
         </div>
         <a href="./SUV.html"><button>About SUV Cars</button></a>
     </div>
+
+    <!-- FOOTER -->
 
     <div class="footer section" id="footy">
         <div class="description">
