--- a/Tools/Topfive.html
+++ b/Tools/Topfive.html
@@ -18,7 +18,7 @@
 
         <div class="contents">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="./home.html">Home</a></li>
                 <li><a id="navCartypes">Car Types</a></li>
                 <li><a href="./Topfive.html">Top Five</a></li>
                 <li><a href="#footy">Contact</a></li>
@@ -34,28 +34,65 @@
         </div>
     </div>
 
+<!-- TABLE -->
 
+    <div class="table-container">
+        <div class="table">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Rank</th>
+                        <th>Brand</th>
+                        <th>Car Name</th>
+                        <th>Country</th>
+                        <th>Year</th>
+                        <th>Top Speed</th>
+                        <th>Horse Power</th>
+                        <th>0 - 60 mph</th>
+                    </tr>
+                </thead>
+                    <tbody id="table-body">
 
-
-
-
-
-    <!-- FOOTER -->
-
-    <div class="footer section" id="footy">
-        <div class="description">
-            <div class="sec1">
-                
-            </div>
-            <div class="sec2"></div>
-            <div class="sec3"></div>
+                    </tbody>
+            </table>
         </div>
+
+        <div class="table-btns">    
+            <button id="btn-fast">Fastest</button>
+            <button id="btn-cost">Costliest</button>
+            <button id="btn-safe">Safest</button>
+            <button id="btn-gas">Gas Mileage</button>
+
+            <button id="btn-usa">USA</button>
+            <button id="btn-ind">India</button>
+            <button id="btn-germ">Germany</button>
+            <button id="btn-jap">Japanese</button>
+            <button id="btn-uk">UK</button>
+            <button id="btn-italy">Italy</button>
+            <button id="btn-swed">Sweden</button>
+
+            <button id="btn-hp">Most HP</button>
+            <button id="btn-sixty">0-60mph</button>
+            <button id="btn-elect">Electric</button>
+            <button id="btn-truck">Truck</button>
+        </div>
+        
     </div>
 
 
 
 
 
+
+
+
+
+
+
+
+
+
+
 </body>
-    <script src="./index.js"></script>
+    <script src="./table.js"></script>
 </html>
