--- a/Tools/test.html
+++ b/Tools/test.html
@@ -1,8 +1,33 @@
-Average Cost: $25,000 - $200,000+
-Average HP: 200 - 700+
-Design: Sleek, aerodynamic, aggressive
-Technology: Advanced driver aids, connectivity
-Handling: Responsive, agile, precise
-Fuel Efficiency: Moderate to low
-Performance: High-speed capability, powerful engines
-Driving Experience: Thrilling, exhilarating
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Tabular Data</title>
+<link rel="stylesheet" href="styles.css">
+</head>
+<body>
+<div class="table-container">
+    <div class="table">
+        <table>
+            <thead>
+                <tr>
+                    <th>Rank</th>
+                    <th>Brand</th>
+                    <th>Car Name</th>
+                    <th>Country</th>
+                    <th>Year</th>
+                    <th>Top Speed</th>
+                    <th>Horse Power</th>
+                    <th>0 - 60 mph</th>
+                </tr>
+            </thead>
+            <tbody id="table-body">
+                <!-- Table rows will be dynamically generated here -->
+            </tbody>
+        </table>
+    </div>
+</div>
+<script src="test.js"></script>
+</body>
+</html>
