--- a/Tools/home.html
+++ b/Tools/home.html
@@ -195,11 +195,50 @@
 
     <div class="footer section" id="footy">
         <div class="description">
-            <div class="sec1">
-                
+            <div class="logobox">
             </div>
-            <div class="sec2"></div>
-            <div class="sec3"></div>
+            <div class="section-box">
+                <div class="secs">
+                    <h3>CAR</h3>
+                    <a href="https://www.audi.com/en.html">Audi</a>
+                    <a href="">BMW</a>
+                    <a href="">Benz</a>
+                    <a href="">KIA</a>
+                    <a href="">Ford</a>
+                    <a href="">Dodge</a>
+                    <a href="">Toyota</a>
+                    <a href="">Tesla</a>
+                    <a href="">Volvo</a>
+                    <a href="">Shelby</a>
+                </div>
+                <div class="secs">
+                    <h3>BRANDS</h3>
+                    <a href="">Nissan</a>
+                    <a href="">McLaren</a>
+                    <a href="">Chevrolet</a>
+                    <a href="">Lexus</a>
+                    <a href="">Cadillac</a>
+                    <a href="">Porsche</a>
+                    <a href="">Rolls Royce</a>
+                    <a href="">Land Rover</a>
+                    <a href="">Lamboghini</a>
+                    <a href="">Ferrari</a>
+                </div>
+                <div class="secs">
+                    <h3>DATA & IMAGE SOURCES</h3>
+                    <a href="">Chat GPT</a>
+                    <a href="">Pexels</a>
+                    <a href="">Pinterest</a>
+                    <a href="">Wallpaper Cave</a>
+                    <a href="">Wallpaper Flare</a>
+                    <a href="">Unsplash</a>
+                    <a href="">Peakpx</a>
+                </div>
+            </div>
+            <hr class="footer-line">
+            <div class="contact-me">
+                <a href="">E-mail</a> <a href=""> GitHub</a> <a href="">Linked In</a>
+            </div>
         </div>
     </div>
 
