--- a/Tools/Topfive.html
+++ b/Tools/Topfive.html
@@ -36,6 +36,8 @@
 
 <!-- TABLE -->
 
+    <div class="table-bg"></div>
+
     <div class="table-container">
         <div class="table">
             <table>
@@ -78,19 +80,6 @@
         </div>
         
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 </body>
